force-app/main/default/objects/Loan_Detail__c/Loan_Detail__c.object-meta.xml
<CustomObject>
    <label>Loan Detail</label>
    <nameField>
        <label>Loan Delail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>