force-app/main/default/objects/Loan_Detail__c/fields/Loan_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Date__c</fullName>
    <formula>Loan__r.Loan_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Date</label>
    <type>Date</type>
</CustomField>