force-app/main/default/objects/Loan_Detail__c/fields/Months__c.field-meta.xml
<CustomField>
    <fullName>Months__c</fullName>
    <formula>(TODAY() - Loan_Date__c )/30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>