force-app/main/default/objects/Loan_Detail__c/fields/Per_month_EMI__c.field-meta.xml
<CustomField>
    <fullName>Per_month_EMI__c</fullName>
    <formula>Loan__r.Monthly_EMI_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Per month EMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>