force-app/main/default/objects/Loan_Detail__c/fields/Remaining_amount__c.field-meta.xml
<CustomField>
    <fullName>Remaining_amount__c</fullName>
    <formula>Loan__r.Loan_amount__c- Months__c * Per_month_EMI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>