force-app/main/default/objects/Loan_Detail__c/fields/Remaining_installments__c.field-meta.xml
<CustomField>
    <fullName>Remaining_installments__c</fullName>
    <formula>Loan__r.Number_of_installments__c- Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining installments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>